# sorting-dice

./: .gitignore  LICENSE  README.md  games.yaml  main.py  players.yaml  pyproject.toml  votes.template.yaml
app/: project.clj
app/src/app/: handler.clj
solver/: games.yaml  main.py  votes.template.yaml
