[tool.poetry]
name = "sorting-dice"
version = "0.1.0"
description = "Optimize game night!"
authors = ["Nicholas Farley <nicholasafarley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.740.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
